added flowframe clear, margin, style and textcolor settings